# MDTF-diagnostics

./: .all-contributorsrc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMPOSITE.py  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SECURITY.md  authors.cff  conda.yml  config.yml  debug.ipynb  eulerian_readme.md  mdtf  mdtf.py  mdtf_framework.py  mdtf_pp.py  mdtf_slurm  multirun_scratch.py  my_gfdl  namelist  pyproject.toml  setup.py  test.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_pod_request.md
.github/workflows/: codeql.yml  docker-build-and-push.yml  docker-build-push-aws.yml  mdtf_tests.yaml  (+7 more)
MDTF_diagnostics/: mdtf_framework.py
Tables/: CMIP6_Omon.json
data/: fieldlist_CESM.jsonc  fieldlist_CMIP.jsonc  fieldlist_GFDL.jsonc  fieldlist_NCAR.broken.jsonc  fieldlist_NCAR.jsonc  modifiers.jsonc
doc/: Makefile  conf.py  copy_external_docs.py  copy_pod_docs.py  docutils.conf  dummy_file.txt  index.rst  latexmkrc  pp_flow_diagram.md  requirements.txt  tex_all.rst  tex_getting_started.rst  tex_user.rst  tex_walkthrough.rst
forcing_feedback/: forcing_feedback.py  forcing_feedback_kernelcalcs.py
src/: __init__.py  cli.jsonc  cli.py  cli_gfdl.jsonc  cli_plugins.jsonc  cli_subcommands.jsonc  cli_temp.py  cli_template.jsonc  cmip6.py  conda_env_NCL.yml  conda_env_R.yml  conda_env_base.yml  conda_env_dev.yml  conda_env_python.yml  conda_env_setup.sh  conda_init.sh  config.jsonc  config.yml  config_AM4.json  config_CESM.yml  config_CMIP.yml  config_CMIP_GFDL.json  config_gfdl.yml  configs.py  conflict_resolution.py  core.py  data_manager.py  data_manager_BACKUP_21766.py  data_manager_BASE_21766.py  data_manager_multirun.py  data_model.py  data_sources.py  dataspec.py  datelabel.py  default_cesm2.jsonc  default_finite_amplitude_wave_diag.jsonc  default_gfdl.jsonc  default_jj.jsonc  default_test.jsonc  default_test_ocnflux.jsonc  (+69 more)
templates/: mdtf_gfdl.csh  module_config.jsonc  module_config.yml  run_pb.yml  runtime_config.jsonc  runtime_config.yml  runtime_config_NE.jsonc  runtime_config_NE.yml
tests/: .~lock.esm_catalog_test_macos.csv#  .~lock.esm_catalog_test_ubuntu.csv#  docker_test_set1.jsonc  dummy_config.json  esm_catalog_CESM_test_macos.json  esm_catalog_CESM_test_ubuntu.json  esm_catalog_CMIP_test_macos.json  esm_catalog_CMIP_test_ubuntu.json  esm_catalog_GFDL_test_macos.json  esm_catalog_GFDL_test_ubuntu.json  esm_catalog_test_macos.csv  esm_catalog_test_macos.json  esm_catalog_test_ubuntu.csv  esm_catalog_test_ubuntu.json  github_actions_test_macos_1a.jsonc  github_actions_test_macos_1b.jsonc  github_actions_test_macos_3.jsonc  github_actions_test_macos_set1.jsonc  github_actions_test_macos_set2.jsonc  github_actions_test_macos_set3.jsonc  github_actions_test_ubuntu_1a.jsonc  github_actions_test_ubuntu_1b.jsonc  github_actions_test_ubuntu_2.jsonc  github_actions_test_ubuntu_3.jsonc  github_actions_test_ubuntu_set1.jsonc  github_actions_test_ubuntu_set2.jsonc  github_actions_test_ubuntu_set3.jsonc  make_file_checksums.py  pod_test.py  pod_test_configs.yml  shared_test_utils.py  test_POD_execution.py  test_cmip6.py  test_data_manager.py  test_datelabel.py  test_diagnostic.py  test_environment_manager.py  test_file_io.py  test_gfdl.py  test_input_checksums.py  (+13 more)
tools/: config_template.yml  rename_input_files.py
traffic/: clones.csv  views.csv
user_scripts/: example_pp_script.py
(+1752 files in other folders)
