[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
description = "Process-oriented diagnostics for weather and climate simulations"
keywords = ["process-oriented", "diagnostics", "climate", "weather", "mdtf"]
license = { text = "LGPLv3" }
maintainers = [{ name = "MDTF Collaboration", email = "20195932+wrongkindofdoctor@users.noreply.github.com" }]
name = "MDTF-Diagnostics"
version = "4.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "cftime==1.6.2",
    "xarray==2025.1.2",
    "cf_xarray==0.8.4",
    "matplotlib==3.8.2",
    "pandas==2.2.2",
    "pint==0.24.3",
    "dask==2025.2.0",
    "ecgtools==2024.7.31",
    "cfunits==3.3.6",
    "intake==2.0.8",
    "intake-esm @ https://github.com/jtmims/intake-esm/archive/refs/tags/2025.2.3.tar.gz",
    "subprocess32==3.5.4",
    "pyyaml==6.0.1",
    "click==8.1.7",
    "ghostscript",
    "pybind11==2.12.0"                 
]

[tool.setuptools.packages.find]
include = ["MDTF_diagnostics*"]

[tool.setuptools]
script-files = ["MDTF_diagnostics/mdtf_framework.py"]
include-package-data = true

[tool.setuptools.package-data]
MDTF_diagnostics = [
    'data/*', 
    'data/gfdl-cmor-tables/*',
    'data/cmip6-cmor-tables/Tables/*',
    'diagnostics/*/*',
    'src/*',
    'src/conda/*',
    'src/html/*'
]
